# discord-bot

./: .editorconfig  .editorconfig-checker.json  .env.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  SPECS.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml  ruff.toml
ci/scripts/: deploy.sh
ci/systemd/: discord-bot.service
src/: common_utils.py  dump_drunkards.py  main.py
src/bot/: bot.py  helpers.py  schemas.py
src/bot/commands/: __init__.py  _handlers.py
src/bot/commands/ananaga/: _help.py  _shots.py  _statistics.py
src/bot/events/: __init__.py  _handlers.py  _reaction_role_rules.py  _role_manager.py
src/bot/messages/: __init__.py  _handlers.py
src/constants/: messages.py
src/orm/: __init__.py  _db.py
src/orm/migrations/: env.py
src/orm/migrations/versions/: 2026-07-04_1106_17_65b976d2208f_create_drunkards_table.py  2026-07-04_1222_26_b82ef91d4b5d_rename_unmute_date_to_sobriety_date.py  2026-07-19_2046_03_74fe61846b28_add_removed_roles_id_column.py
src/orm/models/: __init__.py  drunkard.py
src/orm/repository/: drunkard.py
src/shared/: app_context.py  config.py
src/tests/: test_common_utils.py  test_drunk_schedule.py
