[project]
name = "pavlikrpg-discord-bot"
version = "1.1.1"
description = "Discord bot for PavlikRPG's server."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "discord-py>=2.5.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.mypy]
disable_error_code = ["import-untyped"]
ignore_missing_imports = true
